@@ -20,6 +20,8 @@ next:
             - add alerts and notifications button to extinfo page
           - Logcache:
             - speed up updates
+          - Panorama:
+            - add quick filter for dashboard dropdown
 
 2.18     Mon Dec 25 15:27:06 CET 2017
           - add new option 'commandline_obfuscate_pattern'
